[gd_scene load_steps=17 format=3 uid="uid://be1u13i3321dd"]

[ext_resource type="Theme" uid="uid://cwteexwb3vbyi" path="res://UI/Style/Bee_Theme.tres" id="1_lh646"]
[ext_resource type="Script" path="res://UI/hud.gd" id="1_w0mb1"]
[ext_resource type="Texture2D" uid="uid://bdcf73hhgoh4j" path="res://UI/Art/Right_Meter_Crop_Overlay.png" id="3_hvlpn"]
[ext_resource type="Texture2D" uid="uid://clxkmmfr23b0f" path="res://UI/Art/Right_Meter_Fill.png" id="3_rko4g"]
[ext_resource type="Texture2D" uid="uid://doku0qpvqhxs5" path="res://UI/Art/Center_Dock.png" id="4_4x2ru"]
[ext_resource type="Texture2D" uid="uid://6u1f1d80ph0y" path="res://UI/Art/Right_Meter_Bar.png" id="4_k0lhi"]
[ext_resource type="Texture2D" uid="uid://dy6u46yboy53x" path="res://UI/Art/Left_Meter_Bar.png" id="4_m5gb1"]
[ext_resource type="Texture2D" uid="uid://ckr6oq13yw13j" path="res://UI/Art/Health_Jar.png" id="4_xo1nj"]
[ext_resource type="Texture2D" uid="uid://d2c6t17xfaleb" path="res://UI/Art/Left_Meter_Overlay.png" id="5_gfkuu"]
[ext_resource type="Texture2D" uid="uid://dsgpuvqv8e812" path="res://UI/Art/Left_Meter_Fill.png" id="7_haw5s"]
[ext_resource type="Texture2D" uid="uid://v7ojar4c3ctt" path="res://UI/Art/Wings.png" id="7_pajgt"]
[ext_resource type="LabelSettings" uid="uid://ban0wox1lr7ix" path="res://UI/Label_Setting_Big.tres" id="11_j2abc"]
[ext_resource type="PackedScene" uid="uid://cy60dhgo0wcen" path="res://UI/score_pop.tscn" id="13_yn6dh"]
[ext_resource type="Texture2D" uid="uid://dp4u3abr1sl8f" path="res://UI/Art/Pause_Icon.png" id="14_u02pd"]

[sub_resource type="SystemFont" id="SystemFont_uigy6"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_fhcay"]
font = SubResource("SystemFont_uigy6")
font_size = 24
outline_size = 10
outline_color = Color(0.227451, 0.223529, 0, 1)
shadow_size = 13
shadow_color = Color(0, 0, 0, 0.780392)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_lh646")
script = ExtResource("1_w0mb1")
score_pop_scene = ExtResource("13_yn6dh")

[node name="Max" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Ratio" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_right = 140.0
offset_bottom = 140.0

[node name="Pause" type="Button" parent="Ratio"]
visible = false
layout_mode = 2
icon = ExtResource("14_u02pd")
icon_alignment = 1
expand_icon = true

[node name="Health_Meter" type="Control" parent="."]
self_modulate = Color(0.341176, 0.180392, 0.113725, 1)
layout_mode = 1
anchor_left = 0.903
anchor_top = 0.558
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.240061
offset_top = -0.360054
grow_horizontal = 0
grow_vertical = 0

[node name="HealthBar" type="TextureProgressBar" parent="Health_Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.419
anchor_top = 0.053
anchor_right = 1.0
anchor_bottom = 0.879
offset_left = -0.399775
offset_top = 0.00299737
offset_right = 0.0339508
offset_bottom = -0.271057
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("4_k0lhi")
texture_progress = ExtResource("3_rko4g")

[node name="Overlay" type="TextureRect" parent="Health_Meter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hvlpn")
expand_mode = 4

[node name="HealthJar" type="TextureRect" parent="Health_Meter"]
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -169.0
offset_top = -110.0
offset_right = 24.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.338594
texture = ExtResource("4_xo1nj")
expand_mode = 4
stretch_mode = 5

[node name="Flight_Meter" type="TextureRect" parent="."]
self_modulate = Color(0.294118, 0.305882, 0.411765, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.000925935
anchor_top = 0.654
anchor_right = 0.000925935
anchor_bottom = 0.872917
offset_top = 0.320648
offset_right = 105.0
offset_bottom = 5.34058e-05
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_m5gb1")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="FlyBar" type="TextureProgressBar" parent="Flight_Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.088
anchor_right = 0.762
anchor_bottom = 0.862
offset_left = 0.0100012
offset_top = 0.0399971
offset_right = -0.00999674
offset_bottom = -0.0400202
grow_horizontal = 2
grow_vertical = 2
value = 50.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("7_haw5s")

[node name="Overlay" type="TextureRect" parent="Flight_Meter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_gfkuu")
expand_mode = 4
stretch_mode = 5

[node name="Wings" type="TextureRect" parent="Flight_Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.855
anchor_right = 0.857
anchor_bottom = 0.902
offset_left = -29.965
offset_top = -97.1
offset_right = 89.015
offset_bottom = 47.16
rotation = 0.338594
texture = ExtResource("7_pajgt")
expand_mode = 4
stretch_mode = 5

[node name="Center_Dock" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -248.0
offset_right = -0.00012207
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_4x2ru")
expand_mode = 2
stretch_mode = 5

[node name="Frame" type="Control" parent="Center_Dock"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -192.0
offset_right = 439.0
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2

[node name="Box1" type="HBoxContainer" parent="Center_Dock/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.547
offset_bottom = -0.0240097
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Center_Dock/Frame/Box1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: "
label_settings = ExtResource("11_j2abc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Center_Dock/Frame/Box1"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("11_j2abc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Box2" type="HBoxContainer" parent="Center_Dock/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.557
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0559921
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Center_Dock/Frame/Box2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Distance:"
label_settings = ExtResource("11_j2abc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Distance" type="Label" parent="Center_Dock/Frame/Box2"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("11_j2abc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgain" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.127778
anchor_top = 0.202083
anchor_right = 0.873148
anchor_bottom = 0.746875
offset_bottom = 2.28882e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="TryAgain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="TryAgain/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "The Bee is weary, and returns home."
label_settings = ExtResource("11_j2abc")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="TryAgain/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Thanks for playing!

Made using Godot 4.0.1
Krita 4.0.6
blender 3.2.0
LMMS + Audacity

Made by LettucePie
Twitter @PieLettuce Email thelettucepie@gmail.com"
label_settings = SubResource("LabelSettings_fhcay")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PlayAgain" type="Button" parent="TryAgain/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Play Again?"

[node name="Pause" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="TryAgain/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
