[gd_scene load_steps=24 format=3 uid="uid://ej68kxh031vn"]

[ext_resource type="Theme" uid="uid://cwjsb0qlm86r5" path="res://UI/Style/Bee_Theme.tres" id="1_lh646"]
[ext_resource type="Script" path="res://UI/hud.gd" id="1_w0mb1"]
[ext_resource type="Texture2D" uid="uid://clxkmmfr23b0f" path="res://UI/Art/Right_Meter_Fill.png" id="3_rko4g"]
[ext_resource type="Texture2D" uid="uid://doku0qpvqhxs5" path="res://UI/Art/Center_Dock.png" id="4_4x2ru"]
[ext_resource type="Theme" uid="uid://bd87acx3a4l4n" path="res://UI/Style/SubBee_Theme.tres" id="4_7tbs7"]
[ext_resource type="Texture2D" uid="uid://6u1f1d80ph0y" path="res://UI/Art/Right_Meter_Bar.png" id="4_k0lhi"]
[ext_resource type="Texture2D" uid="uid://dy6u46yboy53x" path="res://UI/Art/Left_Meter_Bar.png" id="4_m5gb1"]
[ext_resource type="Texture2D" uid="uid://e7fxljf38dy3" path="res://UI/Art/Icons/Pause_Icon.png" id="5_a1frm"]
[ext_resource type="Texture2D" uid="uid://d2c6t17xfaleb" path="res://UI/Art/Left_Meter_Overlay.png" id="5_gfkuu"]
[ext_resource type="PackedScene" uid="uid://ottesxy2rk1h" path="res://UI/button_sound.tscn" id="6_ttbs4"]
[ext_resource type="Texture2D" uid="uid://dsgpuvqv8e812" path="res://UI/Art/Left_Meter_Fill.png" id="7_haw5s"]
[ext_resource type="AudioStream" uid="uid://4k73umle8tkt" path="res://UI/Sounds/Select_02.wav" id="7_ilu2f"]
[ext_resource type="Texture2D" uid="uid://v7ojar4c3ctt" path="res://UI/Art/Wings.png" id="7_pajgt"]
[ext_resource type="Texture2D" uid="uid://b1shck77ob0tc" path="res://UI/Art/Right_Meter_Crop_Overlay_Jar.png" id="10_bsxpm"]
[ext_resource type="LabelSettings" uid="uid://ban0wox1lr7ix" path="res://UI/Label_Setting_Big.tres" id="11_j2abc"]
[ext_resource type="PackedScene" uid="uid://cy60dhgo0wcen" path="res://UI/score_pop.tscn" id="13_yn6dh"]
[ext_resource type="Texture2D" uid="uid://cwb03687fuevv" path="res://UI/Art/Icons/Play_Icon.png" id="16_1p7ni"]
[ext_resource type="Texture2D" uid="uid://dbhtyv5nc7cd3" path="res://UI/Art/Return_Arrow.png" id="16_fuy5r"]
[ext_resource type="AudioStream" uid="uid://dseyc2dk7bfkj" path="res://UI/Sounds/Select_06.wav" id="20_5qsnx"]

[sub_resource type="Curve" id="Curve_kqe0u"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 1, Vector2(0.574559, 0), 0.0, 0.154707, 1, 0, Vector2(0.996677, 0.97511), -0.456116, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_fq6c6"]
resource_name = "Danger"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health_Meter/HealthBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.403922, 0.333333, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u4i8a"]
resource_name = "Fine"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Health_Meter/HealthBar:tint_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbk51"]
_data = {
"Danger": SubResource("Animation_fq6c6"),
"Fine": SubResource("Animation_u4i8a")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_lh646")
script = ExtResource("1_w0mb1")
score_pop_scene = ExtResource("13_yn6dh")
danger_curve = SubResource("Curve_kqe0u")

[node name="Max" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_mbk51")
}

[node name="PauseButton" type="TextureButton" parent="."]
layout_mode = 2
offset_right = 219.0
offset_bottom = 219.0
theme = ExtResource("4_7tbs7")
texture_normal = ExtResource("5_a1frm")
ignore_texture_size = true
stretch_mode = 5

[node name="ButtonSound" parent="PauseButton" instance=ExtResource("6_ttbs4")]
stream = ExtResource("7_ilu2f")

[node name="Health_Meter" type="Control" parent="."]
self_modulate = Color(0.341176, 0.180392, 0.113725, 1)
layout_mode = 1
anchor_left = 0.903
anchor_top = 0.558
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.240061
offset_top = -0.360054
grow_horizontal = 0
grow_vertical = 0

[node name="HealthBar" type="TextureProgressBar" parent="Health_Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.419
anchor_top = 0.053
anchor_right = 1.0
anchor_bottom = 0.961
offset_left = 0.00497445
offset_top = 0.00300053
offset_right = -6.10352e-05
offset_bottom = 0.110979
grow_horizontal = 2
grow_vertical = 2
value = 100.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("4_k0lhi")
texture_progress = ExtResource("3_rko4g")

[node name="Overlay" type="TextureRect" parent="Health_Meter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_bsxpm")
expand_mode = 4

[node name="Flight_Meter" type="TextureRect" parent="."]
self_modulate = Color(0.294118, 0.305882, 0.411765, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.000925935
anchor_top = 0.654
anchor_right = 0.000925935
anchor_bottom = 0.872917
offset_top = 0.320648
offset_right = 105.0
offset_bottom = 5.34058e-05
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_m5gb1")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="FlyBar" type="TextureProgressBar" parent="Flight_Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.238
anchor_top = 0.088
anchor_right = 0.762
anchor_bottom = 0.862
offset_left = 0.0100012
offset_top = 0.0399971
offset_right = -0.00999674
offset_bottom = -0.0400202
grow_horizontal = 2
grow_vertical = 2
value = 50.0
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("7_haw5s")

[node name="Overlay" type="TextureRect" parent="Flight_Meter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_gfkuu")
expand_mode = 4
stretch_mode = 5

[node name="Wings" type="TextureRect" parent="Flight_Meter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333
anchor_top = 0.855
anchor_right = 0.857
anchor_bottom = 0.902
offset_left = -29.965
offset_top = -97.1
offset_right = 89.015
offset_bottom = 47.16
rotation = 0.338594
texture = ExtResource("7_pajgt")
expand_mode = 5
stretch_mode = 6

[node name="Center_Dock" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -248.0
offset_right = -0.00012207
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_4x2ru")
expand_mode = 2
stretch_mode = 5

[node name="Frame" type="Control" parent="Center_Dock"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -439.0
offset_top = -192.0
offset_right = 439.0
offset_bottom = -0.00012207
grow_horizontal = 2
grow_vertical = 2

[node name="Box1" type="HBoxContainer" parent="Center_Dock/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.547
offset_bottom = -0.0240097
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Center_Dock/Frame/Box1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="Center_Dock/Frame/Box1"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Box2" type="HBoxContainer" parent="Center_Dock/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.557
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0559921
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Center_Dock/Frame/Box2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Distance:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Distance" type="Label" parent="Center_Dock/Frame/Box2"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause" type="ColorRect" parent="."]
process_mode = 3
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 0.827451)

[node name="Panel" type="Panel" parent="Pause"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.13
anchor_right = 0.93
anchor_bottom = 0.87
offset_bottom = -0.800133
grow_horizontal = 2
grow_vertical = 2

[node name="Vbox" type="VBoxContainer" parent="Pause/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.033
anchor_right = 1.0
anchor_bottom = 0.968
offset_top = 0.140004
offset_right = 0.199951
offset_bottom = -0.559959
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Pause/Panel/Vbox"]
layout_mode = 2
size_flags_vertical = 3
text = "Paused"
label_settings = ExtResource("11_j2abc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Pause/Panel/Vbox"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_vertical = 6
text = "Continue"
icon = ExtResource("16_1p7ni")
expand_icon = true

[node name="ButtonSound" parent="Pause/Panel/Vbox/Continue" instance=ExtResource("6_ttbs4")]

[node name="Return" type="Button" parent="Pause/Panel/Vbox"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_vertical = 6
text = "Return to the Hive"
icon = ExtResource("16_fuy5r")
expand_icon = true

[node name="ButtonSound" parent="Pause/Panel/Vbox/Return" instance=ExtResource("6_ttbs4")]
stream = ExtResource("20_5qsnx")

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Pause/Panel/Vbox/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Pause/Panel/Vbox/Return" to="." method="_on_return_pressed"]
